--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<div class="l-content bakom-bg">
 		<div class="m-box">
 			<h1 class="bakom-fg">bakom.js</h1>
+			<h1 class="bakom-fg2">bakom2.js</h1>
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, ab commodi reprehenderit ipsum odit minus accusamus atque fugiat ut laboriosam!</p>
 		</div>		
 	</div>
 	<script src="bakom.js"></script>
